# stdperiph

./: .gitattributes  .gitignore  CMakeLists.txt  Makefile
CMSIS/Device/ST/STM32F0xx/Include/: stm32f0xx.h
CMSIS/Device/ST/STM32F10x/Include/: stm32f10x.h
CMSIS/Device/ST/STM32L1xx/Include/: stm32l1xx.h
STM32F0xx_StdPeriph_Driver/: CMakeLists.txt
STM32F10x_StdPeriph_Driver/: CMakeLists.txt
STM32L1xx_StdPeriph_Driver/: CMakeLists.txt
